Use a hidden button to avoid layout shifts

--- a/style/style.scss
+++ b/style/style.scss
@@ -148,3 +148,7 @@ tr.re {
 select {
   margin: 0 0 1em 0;
 }
+
+.hidden {
+  visibility: hidden;
+}
